--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -9,7 +9,7 @@ footer {
     background-color: var(--slate-600);
     height: max-content;
     margin-top: 30px;
-    padding: 8px;
+    padding: 8px 0px;
     /* Absolute Positioning makes box-shadow not show */
     /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
                 rgba(60, 64, 67, 0.15) 0px 1px 3px 1px; */
