--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -2,6 +2,7 @@ header {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    height: 20vh;
     background-color: var(--slate-600);
     width: 100%;
     position: sticky;
@@ -9,4 +10,18 @@ header {
     z-index: 99;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
                 rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+
+@media screen and (max-width: 610px) {
+    header {
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    header > h1 {
+        font-size: 3rem;
+        padding-top: 32px;
+        padding-bottom: 16px;
+    }
+
 }
