--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,3 +3,11 @@ body {
     padding: 0;
     font-family: "Roboto-400";
 }
+
+h1, h2, h3, h4, h5, h6, ul, li, a {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+    color: inherit;
+}
