--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,11 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Roboto-400";
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
 }
 
 h1, h2, h3, h4, h5, h6, ul, li, a {
